/*
 *  Copyright (C) 2020-2025 Lucas Nishimura <lucas.nishimura at gmail.com>
 *
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with this program.  If not, see <https://www.gnu.org/licenses/>
 */

package dev.nishisan.utils.map;

/**
 * Eviction policies for {@link HybridOffloadStrategy}.
 * <p>
 * Determines which entries are offloaded to disk when the in-memory
 * capacity threshold is exceeded.
 */
public enum EvictionPolicy {

    /**
     * Evict based purely on the number of in-memory entries.
     * When the threshold is exceeded, the oldest-inserted entries are
     * offloaded to disk (insertion-order eviction).
     */
    SIZE_THRESHOLD,

    /**
     * Least Recently Used — entries that have not been accessed (get/put)
     * for the longest time are offloaded to disk first.
     */
    LRU
}
